# ftpad

./: .gitignore  .mise.toml  .swiftlint.yml  Info.plist  LICENSE  Package.swift  README.md  build.sh  index.html  make_icon.swift  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: checks.yml  release.yml
Sources/App/: AppDelegate.swift  HotkeyManager.swift  PadWindow.swift  StatusBarController.swift
Sources/Core/: Config.swift  Extensions.swift
Tests/: ConfigTests.swift
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
